# gltf_bug

./: Cargo.toml
assets/: mesh_only_viking.glb  mesh_with_armature_viking.glb
src/: main.rs
